WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
134909
Fix crash on WebVideoFullscreenManagerProxy construction.
https://bugs.webkit.org/show_bug.cgi?id=134909
Summary
Fix crash on WebVideoFullscreenManagerProxy construction.
Jeremy Jones
Reported
2014-07-14 16:06:57 PDT
Fix crash on WebVideoFullscreenManagerProxy construction.
Attachments
Patch
(1.95 KB, patch)
2014-07-14 16:12 PDT
,
Jeremy Jones
no flags
Details
Formatted Diff
Diff
Patch
(1.95 KB, patch)
2014-07-14 17:04 PDT
,
Jeremy Jones
no flags
Details
Formatted Diff
Diff
Patch
(1.96 KB, patch)
2014-07-14 17:45 PDT
,
Jeremy Jones
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Jeremy Jones
Comment 1
2014-07-14 16:12:05 PDT
Created
attachment 234886
[details]
Patch
Jeremy Jones
Comment 2
2014-07-14 17:04:50 PDT
Created
attachment 234894
[details]
Patch
Jeremy Jones
Comment 3
2014-07-14 17:45:32 PDT
Created
attachment 234898
[details]
Patch
Jeremy Jones
Comment 4
2014-07-14 17:46:40 PDT
Fix crash introduced by:
https://bugs.webkit.org/show_bug.cgi?id=134890
WebKit Commit Bot
Comment 5
2014-07-14 19:15:46 PDT
Comment on
attachment 234898
[details]
Patch Clearing flags on attachment: 234898 Committed
r171099
: <
http://trac.webkit.org/changeset/171099
>
WebKit Commit Bot
Comment 6
2014-07-14 19:15:50 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug