Fix crash on WebVideoFullscreenManagerProxy construction. https://bugs.webkit.org/show_bug.cgi?id=134909

Unreviewed fix crash from r171089

Remove unnecessary dispatch to main queue since it can happen during construction.

Patch by Jeremy Jones <jeremyj@apple.com> on 2014-07-14

* platform/ios/WebVideoFullscreenInterfaceAVKit.mm:
(WebVideoFullscreenInterfaceAVKit::setWebVideoFullscreenModel): remove dispatch_async

Canonical link: https://commits.webkit.org/152862@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@171099 268f45cc-cd09-0410-ab3c-d52691b4dbfc